--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,8 @@
         "laravel/passport": "^10.1",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
+        "laravel/ui": "^3.3",
+        "nwidart/laravel-modules": "^8.2",
         "spatie/data-transfer-object": "^3.7"
     },
     "require-dev": {
@@ -30,7 +32,8 @@
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/"
+            "Database\\Seeders\\": "database/seeders/",
+            "Modules\\": "Modules/"
         }
     },
     "autoload-dev": {
